--- a/src/newStyle.module.css
+++ b/src/newStyle.module.css
@@ -8,32 +8,46 @@
     flex-direction: column;
 }
 .task {
-    width: 170px;
+    width: 290px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 3px 10px;
+    border-radius: 7px;
+}
+.task:hover {
+    background-color: #FDE9B9;
 }
 .taskChecked {
-    width: 170px;
+    width: 270px;
     text-decoration: line-through;
 }
 /*Переделка*/
 
-.check i, .delete i {
+.FA {
+    display: flex;
+    flex-direction: row;
+}
+.check, .delete {
+    font-size: small;
     opacity: 0;
     cursor: pointer;
     transition: all 0.1s ease-in-out;
+    margin-right: 10px;
 }
-.check i:hover {
+.check:hover {
     color: #0c9463;
 }
-.delete i:hover {
+.delete:hover {
     color: #ff0000;
 }
-.check i:active {
+.check:active {
     transform: translateY(3px);
 }
-.delete i:active {
+.delete:active {
     transform: translateY(3px);
 }
-.taskContainer:hover .check i, .taskContainer:hover .delete i {
+.taskContainer:hover .check, .taskContainer:hover .delete {
     opacity: 1;
 }
 /*Dalee*/
@@ -41,7 +55,7 @@
 .title {
     width: 100%;
     height: 25%;
-    /*background: url('background.jpeg');*/
+
     color: white;
     display: flex;
     justify-content: center;
@@ -51,6 +65,7 @@
     width: 100%;
     height: 15%;
     display: flex;
+
     /*border-bottom: 1px solid #dbdbdb;*/
 }
 .taskInput {
@@ -102,14 +117,15 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .container {
-    width: 250px;
-    height: 400px;
+    width: 350px;
+    height: 470px;
     background-color: white;
     border: none;
     border-radius: 20px;
     box-shadow: 0px 30px 55px 2px rgba(0, 0, 0, 0.46);
     display: flex;
     flex-direction: column;
+    align-items: center;
     overflow: hidden;
     cursor: default;
 }
